# crypto_nn

./: .env.sample  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_DEPLOY.md  bench_features.py  cli_p4.py  cli_p5.py  docker-compose.jetson.yml  docker-compose.pc.yml  docker-compose.train.yml  docker-compose.yml  duck_view.py  duckview.py  explain_p10.py  export_p8.py  features_p2.py  features_p2_5m.py  folds.py  iforest_gate.py  ingest_cg.py  ingest_cg_5m.py  label_p3.py  label_validate.py  monitor_p11.py  p2_check.py  p5_export_oos.py  p5_validate.py  p6_validate.py  p7_calib_merge.py  policy_p7.py  pyproject.toml  qa_p1.py  qa_p1_5m.py  qa_p2.py  realtime_service.py  reporting_p4.py  (+6 more)
app/explain/: api.py  cli.py  ig.py  shap_if.py  store.py
app/export/: cli_p8_export.py  onnx_export.py  parity.py
app/policy/: ev_policy.py  io.py  state.py
app/runtime/: metrics.py  model_session.py  onnx_introspect.py  throttle.py
conf/: barrier.yaml  p1_inputs_cg.yaml  preproc_5m.yaml  runtime.yaml
docker/: jetson.Dockerfile  pc.Dockerfile
meta/: cv_splits.py
meta/duckdb/: p1.duckdb
scripts/: check_compose_train_split.py  cleanup.sh  cloud_train_and_deploy.sh  deploy_auto.sh  env.train.example  healthcheck.sh  jetson_unpack.sh  pack_data.sh  pack_model.sh  push_ssh.sh  startup.sh  train.sh  train_compose.sh  train_full.sh  train_multi.sh  train_parallel.sh
scripts/validators/: p1_gate.py  p2_gate.py  p3_gate.py  p4_gate.py  p5_calib_gate.py  p5_gate.py  p6_gate.py  p8_gate.py
secrets/: .env.example  README.md
tests/: test_check_compose_train_split.py  test_label_p3.py  test_p10_explain.py  test_p10_if_shap.py  test_p10_ig.py  test_p10_parity_ckpt.py  test_p10_ttl.py  test_p11_monitor.py  test_p1_5m.py  test_p2_check.py  test_p3_validate.py  test_p4_sampling.py  test_p5_folds.py  test_p5_training.py  test_p5_validate.py  test_p6_calib.py  test_p7_policy.py  test_p8_export.py  test_p9_real_onnx.py  test_p9_service.py  test_p9_sla.py  test_p9_throttle_tau.py  test_policy_ev.py  test_resample.py  test_throttle_and_idempotency.py  test_transforms.py
