[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coinglass-p1"
version = "0.1.0"
description = "Small data pipeline: CoinGlass ingest → 15m Parquet with QA"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "httpx>=0.27",
  "pandas>=2.1",
  "pyarrow>=12",
  "duckdb>=1.0",
  "pydantic>=2.4",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
ingest-cg = "ingest_cg:app"
qa-p1 = "qa_p1:app"

