[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coinglass-p1"
version = "0.1.0"
description = "Small data pipeline: CoinGlass ingest → 15m Parquet with QA"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "httpx>=0.27",
  "pandas>=2.1",
  "pyarrow>=12",
  "duckdb>=1.0",
  "pydantic>=2.4",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
ingest-cg = "ingest_cg:app"
qa-p1 = "qa_p1:app"
features-p2 = "features_p2:app"
qa-p2 = "qa_p2:app"
bench-features = "bench_features:app"
duck-view = "duck_view:app"
ingest-cg-5m = "ingest_cg_5m:app"
qa-p1-5m = "qa_p1_5m:app"
duckview-5m = "duckview:app"
features-p2-5m = "features_p2_5m:app"
label-p3 = "label_p3:app"
